--- a/styl.css
+++ b/styl.css
@@ -1,13 +1,16 @@
 body {
-	background-color: red;
+	background-color: #DAF7A6;
+	height: 100%;
 }
 table {
 	width: 100%;
 	background-color: orange;
+	border: 1px solid #dddddd;
 		}
 th, td{
-	border: 1px solid #dddddd;
 	text-align: center;
+	width: 15%;
+
 			}
 a.hover {
 	color: white;
@@ -17,17 +20,35 @@ a.hover {
 	float:left;
 	width: 34%;
 	height: 75%;
-	background-color: pink;
+	background-color: #900C3F;
+	height: 80%;
+	color: white;
 }
 #sprzedaz {
 	float: right;
 	width: 33%;
 	height: 75%;
-	background-color: green;
+	background-color: #FFC300;
+	height: 80%;
 }
 #kupno {
 	float:left;
 	width: 33%;
 	height: 75%;
-	background-color: blue;
+	background-color: #581845;
+	height: 80%;
+	color: white;
+}
+#baner {
+	text-align: center;
+	font-family: sans-serif;
+	font-size: 150%;
+	height: 10%;
+	background-color: #C70039;
+	color: white;
+}
+
+#stopka {
+	background-color: #DAF7A6;	
+	font-size: 200%;
 }
